/***********************************************************************
X3 ChangeLog

2009-05-04  Alex Schumann  <rubin@afternet.org>

        * src/chanserv.c: julien and polo noticed a crash during channel register. Fixed

        * x3.conf.example: fix typeo in default channel regex. Thanks again to julien for noticing this.

2009-03-27  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/proto-p10.c: Update PRIV handling code for the latest
	nefarious 1.3 changes.

2009-02-27  Alex Schumann  <rubin@afternet.org>

	* src/proto-p10.c: Patch from muer to support auto-oper for LOC
	connections too.

2009-01-31  Alex Schumann  <rubin@afternet.org>

	* src/chanserv.c: change server link handlers to return an int

	* src/hash.h: change server link handlers to return an int

	* src/plugins/annoy/plugin.py: add some debug code for testing new
	hooks

	* src/modpython.py: support for new hooks server_link, nick_change,
	and new_user

	* src/mod-python.c: support for new hooks server_link, nick_change,
	and new_user

2009-01-30  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/opserv.c: Warning fix.

	* src/proto-p10.c: Bug fix for SF Bug #2547157 (topic ident bug).

2009-01-27  Alex Schumann  <rubin@afternet.org>

	* src/modpython.py: Comment out debug printing

	* src/plugins/hangman: New example plugin: Hangman game

2009-01-27  Alex Schumann  <rubin@afternet.org>

	* src/opserv.c: Fix a hole Sindacious found, where alerts on account
	don't trigger because they arent looked for during/after auth.

2009-01-26  Alex Schumann  <rubin@afternet.org>

	* src/plugins/annoy/plugin.py: more test code

	* src/mod-python.c: added emb_get_info, silenced warnings, and stub 
	TODO comments for all the handlers and emb functions we need to 
	create. search for TODO and lend a hand! :)

2009-01-26  Alex Schumann  <rubin@afternet.org>

	* src/plugins/annoy/plugin.py: new version of test plugin

2009-01-25  Alex Schumann  <rubin@afternet.org>
